screen alignment fixed

--- a/css/global.css
+++ b/css/global.css
@@ -15,7 +15,6 @@ body{
      
      padding: 8px 0px 0px 50px;  
      margin:0px;
-     width: 100%; 
 }
 #navbar ul li{
     
